fixed footer text alignment

--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -103,8 +103,8 @@ main {
 }
 
 footer {
-  /* margin: 1.5rem; */
-  /* text-align: center; */
+  margin: 1.5rem;
+  text-align: center;
 }
 
 /* create our main grid with flexbox, use negative margins to offset the padding on the .card-column class */
